# IN10dfs

./: CMakeLists.txt  README.md  owctl_main.c
CMake/: FindI2C.cmake
include/: i2c-dev.h  ow.h  ow_2408.h  ow_cache.h  ow_connection.h  ow_connection_in.h  ow_debug.h  ow_device.h  ow_devices.h  ow_dirblob.h  ow_filetype.h  ow_functions.h  ow_global.h  ow_memblob.h  ow_none.h  ow_onewirequery.h  ow_parsedname.h  ow_port_in.h  ow_search.h  ow_standard.h  owfs.h
src/: error.c  ow_2408.c  ow_cache.c  ow_connect.c  ow_crc.c  ow_dir.c  ow_dirblob.c  ow_ds2482.c  ow_filelength.c  ow_fs_items.c  ow_fstat.c  ow_getbit.c  ow_memblob.c  ow_name.c  ow_none.c  ow_parse_sn.c  ow_parseinput.c  ow_parsename.c  ow_parseobject.c  ow_parseoutput.c  ow_presence.c  ow_read.c  ow_reconnect.c  ow_regex.c  ow_search.c  ow_tree.c  ow_util.c  ow_visibility.c  ow_write.c  owfs_callback.c
